dataset1235/2025-2/610742602/users/4074228937/executions/677928262_3921830315.log
== RUN (2025-08-23 15:48:23)
-- CODE: 
abastecido = float(input("Qual foi a quantidade de litros abastecidos? "))
total = (2.86*abastecido+50)+imposto
imposto = total * (34/100)
total = (2.86*abastecido+50)+imposto

print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = (2.86*abastecido+50)+imposto
                                 ^^^^^^^
NameError: name 'imposto' is not defined
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = (2.86*abastecido+50)+imposto
                                 ^^^^^^^
NameError: name 'imposto' is not defined
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = (2.86*abastecido+50)+imposto
                                 ^^^^^^^
NameError: name 'imposto' is not defined
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = (2.86*abastecido+50)+imposto
                                 ^^^^^^^
NameError: name 'imposto' is not defined
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = (2.86*abastecido+50)+imposto
                                 ^^^^^^^
NameError: name 'imposto' is not defined
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = (2.86*abastecido+50)+imposto
                                 ^^^^^^^
NameError: name 'imposto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 15:49:36)
-- CODE: 
abastecido = float(input("Qual foi a quantidade de litros abastecidos? "))

total = (2.86*abastecido+50)+((2.86*abastecido+50)*(34/100))

print(round(total,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
Qual foi a quantidade de litros abastecidos? 106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
Qual foi a quantidade de litros abastecidos? 634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
Qual foi a quantidade de litros abastecidos? 258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
Qual foi a quantidade de litros abastecidos? 401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
Qual foi a quantidade de litros abastecidos? 979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
Qual foi a quantidade de litros abastecidos? 230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
